# dart-vision-system

./: .gitignore  CLAUDE.md  README.md  SIMPLE_DETECTOR_GUIDE.md  example_simple_detector.py  requirements.txt
.agent-memory/: project-context.md  session-summary.md
.claude/: settings.local.json
.tmp.driveupload/: 181  185  189  193  201  205  215  219  229  233
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: calibration.py  cameras.py  detection.py  game.py  profiles.py  warp.py  websocket.py
backend/models/: __init__.py  board.py  camera.py  game.py  stereo.py
backend/scoring/: board_model.py  confidence.py  game_engine.py
backend/services/: profile_store.py
backend/tests/: test_api.py  test_board_fitting.py  test_board_model_scoring.py  test_calibration.py  test_camera.py  test_confidence.py  test_detection.py  test_device_watcher.py  test_game_engine.py  test_models.py  test_multicam.py  test_pipeline.py  test_profiles.py  test_shared_buffer.py  test_stereo_calibration.py  test_triangulation.py  test_warp.py  test_websocket_manager.py
backend/vision/: board_fitting.py  calibration.py  camera.py  detection.py  multicam.py  pipeline.py  shared_buffer.py  stereo.py  triangulation.py  warp.py
config/: default_config.yaml
frontend/: index.html
scripts/: benchmark_performance.py  calibrate.py  game_ui.py  generate_charuco.py  live_demo.py  test_camera.py  test_motion_tuning.py  test_scoring.py
src/: __init__.py
tasks/: TASK-INDEX.md  phase1-mvp.md  phase10-extensions.md  phase2-calibration.md  phase3-persistence.md  (+6 more)
(+74 files in other folders)
