[project]
name = "dart-vision-backend"
version = "0.1.0"
description = "Dart Vision Scoring System Backend"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
